# qubic-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
qubic_lab/: alpha_zero.py  artifacts.py  game.py  model_api.py  neural.py  probes.py  reporting.py  rl_deep.py  rl_tabular.py  runlog.py  runs.py  selfplay.py  web.py
qubic_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qubic_lab/cli/: generate_selfplay.py  play.py  report_card.py  run_suite.py  train_alpha_zero.py  train_deep.py  train_tabular.py
tests/: test_deep_rl.py  test_game.py  test_model_api.py  test_probes_report_alpha.py  test_rl_tabular.py  test_selfplay.py  test_web_api.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/demo/: analysis-20260530_010720.md
web/src/: demoRun.json  main.jsx  styles.css
